giao_dien_chua_hoan_chinh

--- a/ASP/Views/Home/Index.cshtml
+++ b/ASP/Views/Home/Index.cshtml
@@ -2,7 +2,127 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+
+       <link rel="stylesheet" href="~/css/index.css" asp-append-version="true" />
+
+<div style="background-color:rgb(215, 237, 234);width:100%;height:300px;"></div>
+<div style="background-color:rgb(170, 181, 179);width:100%;height:70px;"></div>
+
+
+
+        <section class="medical-grid">
+    <div class=" grid-2">
+
+        <div class="medical-item" style="background-image:url('https://via.placeholder.com/800x500')">
+            <div class="overlay cyan">
+                <span>THIẾT BỊ</span>
+                <h3>CHẨN ĐOÁN<br>HÌNH ẢNH</h3>
+                <a href="#">Xem chi tiết</a>
+            </div>
+        </div>
+
+        <div class="medical-item" style="background-image:url('https://via.placeholder.com/800x500')">
+            <div class="overlay purple">
+                <span>THIẾT BỊ</span>
+                <h3>HỒI SỨC<br>CẤP CỨU</h3>
+                <a href="#">Xem chi tiết</a>
+            </div>
+        </div>
+
+        <div class="medical-item" style="background-image:url('https://via.placeholder.com/800x500')">
+            <div class="overlay yellow">
+                <span>THIẾT BỊ</span>
+                <h3>PHÒNG MỔ</h3>
+                <a href="#">Xem chi tiết</a>
+            </div>
+        </div>
+
+        <div class="medical-item" style="background-image:url('https://via.placeholder.com/800x500')">
+            <div class="overlay blue">
+                <span>THIẾT BỊ</span>
+                <h3>CHUYÊN KHOA NỘI</h3>
+                <a href="#">Xem chi tiết</a>
+            </div>
+        </div>
+         <div class="medical-item" style="background-image:url('https://via.placeholder.com/800x500')">
+            <div class="overlay pink">
+                <span>THIẾT BỊ</span>
+                <h3>CHUYÊN KHOA SẢN - NHI</h3>
+                <a href="#">Xem chi tiết</a>
+            </div>
+        </div>
+
+        <div class="medical-item" style="background-image:url('https://via.placeholder.com/800x500')">
+            <div class="overlay blue">
+                <span>THIẾT BỊ</span>
+                <h3>PHỤC HỒI CHỨC NĂNG</h3>
+                <a href="#">Xem chi tiết</a>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+<section class="medical-knowledge">
+    <div class="container">
+
+        <div class="section-title">
+            <h2>KIẾN THỨC Y TẾ</h2>
+            <a href="#">Xem tất cả</a>
+        </div>
+
+        <div class="knowledge-grid">
+
+            <div class="knowledge-card">
+                <img src="https://via.placeholder.com/400x250" />
+                <div class="knowledge-content">
+                    <h4>Khi bị nhồi máu cơ tim, bạn chỉ có 10 giây để cứu lấy mình</h4>
+                    <p>
+                        Bệnh nhân thường ngực có một luồng đau nhói, hơn thế nữa nó bắt đầu lan
+                        đến cánh tay và cằm...
+                    </p>
+                    <span>Ngày 10/10/2024</span>
+                </div>
+            </div>
+
+            <div class="knowledge-card">
+                <img src="https://via.placeholder.com/400x250" />
+                <div class="knowledge-content">
+                    <h4>Khi bị nhồi máu cơ tim, bạn chỉ có 10 giây để cứu lấy mình</h4>
+                    <p>
+                        Bệnh nhân thường ngực có một luồng đau nhói, hơn thế nữa nó bắt đầu lan
+                        đến cánh tay và cằm...
+                    </p>
+                    <span>Ngày 10/10/2024</span>
+                </div>
+            </div>
+
+            <div class="knowledge-card">
+                <img src="https://via.placeholder.com/400x250" />
+                <div class="knowledge-content">
+                    <h4>Khi bị nhồi máu cơ tim, bạn chỉ có 10 giây để cứu lấy mình</h4>
+                    <p>
+                        Bệnh nhân thường ngực có một luồng đau nhói, hơn thế nữa nó bắt đầu lan
+                        đến cánh tay và cằm...
+                    </p>
+                    <span>Ngày 10/10/2024</span>
+                </div>
+            </div>
+
+            <div class="knowledge-card">
+                <img src="https://via.placeholder.com/400x250" />
+                <div class="knowledge-content">
+                    <h4>Khi bị nhồi máu cơ tim, bạn chỉ có 10 giây để cứu lấy mình</h4>
+                    <p>
+                        Bệnh nhân thường ngực có một luồng đau nhói, hơn thế nữa nó bắt đầu lan
+                        đến cánh tay và cằm...
+                    </p>
+                    <span>Ngày 10/10/2024</span>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+
