--- a/ASP/Views/Shared/_Layout.cshtml
+++ b/ASP/Views/Shared/_Layout.cshtml
@@ -11,33 +11,66 @@
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
 
+
 </head>
 <body>
     <div class="wrapper">
-        <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ASP</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <main role="main" class="content flex-fill container">
-            @RenderBody()
-        </main>
+       <header class="site-header">
+<div class="top-header">
+<div class="container">
+<div class="logo-area">
+<img src="ASP/wwwroot/image/Exit.png" alt="Logo" />
+<div class="company-info">
+<h1>CÔNG TY CỔ PHẦN THIẾT BỊ CÔNG NGHỆ CAO TM</h1>
+<p>Nhập khẩu và Phân Phối Thiết Bị Y Tế Cao Cấp Chính Hãng</p>
+</div>
+</div>
+<div class="header-right">
+<div class="language"><img src="vn.png" alt="VN"></div>
+<div class="hotline">0909 000 000</div>
+</div>
+</div>
+</div>
+
+
+<div class="nav-bar">
+<div class="container nav-flex">
+
+<ul class="menu" id="mainMenu">
+ <li>
+      <a  asp-controller="Home" asp-action="Index">TRANG CHỦ</a>
+
+    <li>
+        <a asp-controller="Home" asp-action="About">GIỚI THIỆU</a>
+    </li>
+    <li>
+        <a asp-controller="Home" asp-action="Product">SẢN PHẨM</a>
+    </li>
+    <li>
+        <a asp-controller="Home" asp-action="Projects">DỰ ÁN</a>
+    </li>
+    <li>
+        <a asp-controller="Home" asp-action="Services">DỊCH VỤ</a>
+    </li>
+    <li>
+        <a asp-controller="Home" asp-action="News">TIN TỨC</a>
+    </li>
+    <li>
+        <a asp-controller="Home" asp-action="Recruitment">TUYỂN DỤNG</a>
+    </li>
+    <li>
+        <a asp-controller="Home" asp-action="Contact">LIÊN HỆ</a>
+    </li>
+</ul>
+<div class="search-box">
+<input type="text" placeholder="Tìm kiếm…" />
+</div>
+</div>
+</div>
+</header>
+    <main role="main" class="content flex-fill">
+    @RenderBody()
+</main>
 
    <footer>
   <div class="footer-main">
@@ -102,7 +135,7 @@
 
 
     </div>
-    
+  
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
