--- a/ASP/wwwroot/css/site.css
+++ b/ASP/wwwroot/css/site.css
@@ -29,3 +29,40 @@ body {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
   text-align: start;
 }
+
+
+.menu {
+    display: flex;
+}
+
+.menu li a {
+    display: block;
+    padding: 14px 16px;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #333;
+    position: relative;
+}
+
+.menu li a:hover {
+    color: #004a9f;
+}
+
+.menu li a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 2px;
+    width: 0;
+    background: #004a9f;
+    transition: width .25s ease;
+}
+
+.menu li a:hover::after {
+    width: 100%;
+}
+a {
+    text-decoration: none;
+}
