--- a/ASP/Views/Home/Services.cshtml
+++ b/ASP/Views/Home/Services.cshtml
@@ -1,5 +1,57 @@
 @{
     ViewData["Title"] = "Services";
 }
-<div style="background-color:rgb(215, 237, 234);width:100%;height:300px;"></div>
-<div style="background-color:rgb(170, 181, 179);width:100%;height:70px;"></div>
+   <link rel="stylesheet" href="~/css/about.css" asp-append-version="true" />
+  <center><div style="background-color:rgb(215, 237, 234);width:1600px;height:300px;"></div>
+<div style="background-color:rgb(170, 181, 179);width:1600px;height:70px;"></div></center>
+
+    <div class=" mt-4">
+        <div class="row">
+
+           
+            <div class="col-md-8">
+                <div class="box">
+                    <h4 class="box-title">GIỚI THIỆU</h4>
+                    <p><b>Với đội ngũ chuyên gia có kinh nghiệm hơn 10 năm tham gia các dự án đầu tư mua sắm trang thiết bị y tế, TM Hitech đảm bảo sẽ đưa ra những tư vấn hữu ích cho dự án của bạn. Chúng tôi cam kết tư vấn miễn phí trong toàn bộ dự án với mục tiêu tạo sự tin tưởng và mối liên hệ tốt với khách hàng.</b></p>
+                    <p>Trong bối cảnh thị trường rộng mở như hiện nay, có rất nhiều dòng thiết bị y tế với giá cả và chất lượng khác nhau để khách hàng lựa chọn. Điều này đôi khi làm khó cho các quyết định đầu tư của khách hàng.</p>
+                    <p>Kinh nghiệm lâu năm trong ngành thiết bị y tế, TM Hitech tự tin có thể hỗ trợ khách hàng thiết kế tổng thể dự án, xây dựng cấu hình chi tiết các dòng thiết bị sử dụng cho bệnh viện hay phòng khám của bạn.</p>
+                    <div class="row my-3">
+                        <div class="col-12"><img src="~/Content/images/intro1.jpg" class="img-fluid intro-img" /></div>
+                       
+                    </div>
+
+                    <h5 class="section-title">Dịch vụ trong bảo hành</h5>
+                   <p>Tất cả các thiết bị Công ty cung cấp đều được bảo hành đảm bảo theo đúng tiêu chuẩn và cam kết của nhà sản xuất. Đội ngũ kỹ sư của Công ty giàu kinh nghiệm được cử đi tập huấn và đào tạo hàng năm ở nước ngoài theo các khóa tập huấn của Hãng đại diện, nhà sản xuất… chúng tôi hy vọng đáp ứng được yêu cầu của quý khách hàng.</p>
+                    <p>Bất cứ lúc nào trong thời gian ngắn nhất, nhân viên kỹ thuật sẽ có mặt theo yêu cầu của khách hàng để chỉ dẫn thêm những vấn đề liên quan đến kỹ thuật của máy hoặc xử lý những sự cố bất thường.</p>
+                    <h5 class="section-title">Dịch vụ sau bảo hành</h5>
+                    <p>Kiểm tra định kỳ lâu dài cho tất cả các thiết bị do Công ty cung cấp.</p>
+                    <p>Sẵn sàng ký hợp đồng bảo trì nếu Quý khách hàng có yêu cầu, giá cả phù hợp với giá hiện hành trên thị trường.</p>
+                    <p>Với kinh nghiệm & uy tín của mình, TM Hitech luôn cam kết hoàn thành tốt nhất các yêu cầu về cung cấp, lắp đặt & hướng dẫn, tư vấn cho các khách hàng.</p>
+                </div>
+            </div>
+
+         
+            <div class="col-md-4">
+                <div class="box mb-4">
+                    <h4 class="box-title">SẢN PHẨM NỔI BẬT</h4>
+                    <ul class="sidebar-list">
+                        <li><img src="~/Content/images/sp1.jpg" /><a href="#"></a></li>
+                        <li><img src="~/Content/images/sp2.jpg" /><a href="#"></a></li>
+                        <li><img src="~/Content/images/sp3.jpg" /><a href="#"></a></li>
+                    </ul>
+                </div>
+
+                <div class="box">
+                    <h4 class="box-title">TIN NỔI BẬT</h4>
+                    <ul class="news-list">
+                        <li><a href="#">Khi bị mỏi mắt cần làm gì?</a><span>23-02-2018</span></li>
+                        <li><a href="#">Cách chăm sóc sức khỏe</a><span>10-03-2018</span></li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
