--- a/ASP/Views/Home/About.cshtml
+++ b/ASP/Views/Home/About.cshtml
@@ -4,8 +4,9 @@
 }
 
      <link rel="stylesheet" href="~/css/about.css" asp-append-version="true" />
-  <div style="background-color:rgb(215, 237, 234);width:100%;height:300px;"></div>
-<div style="background-color:rgb(170, 181, 179);width:100%;height:70px;"></div>
+  <center><div style="background-color:rgb(215, 237, 234);width:1600px;height:300px;"></div>
+<div style="background-color:rgb(170, 181, 179);width:1600px;height:70px;"></div></center>
+
     <div class=" mt-4">
         <div class="row">
 
