--- a/ASP/Views/Home/Product.cshtml
+++ b/ASP/Views/Home/Product.cshtml
@@ -2,5 +2,5 @@
     ViewData["Title"] = "Product";
 }
 
-<div style="background-color:rgb(215, 237, 234);width:100%;height:300px;"></div>
-<div style="background-color:rgb(170, 181, 179);width:100%;height:70px;"></div>
+<center><div style="background-color:rgb(215, 237, 234);width:1600px;height:300px;"></div>
+<div style="background-color:rgb(170, 181, 179);width:1600px;height:70px;"></div></center>
