--- a/ASP/Views/Home/Projects.cshtml
+++ b/ASP/Views/Home/Projects.cshtml
@@ -2,5 +2,43 @@
 @{
     ViewData["Title"] = "Projects";
 }
-<div style="background-color:rgb(215, 237, 234);width:100%;height:300px;"></div>
-<div style="background-color:rgb(170, 181, 179);width:100%;height:70px;"></div>
+   <link rel="stylesheet" href="~/css/about.css" asp-append-version="true" />
+  <center><div style="background-color:rgb(215, 237, 234);width:1600px;height:300px;"></div>
+<div style="background-color:rgb(170, 181, 179);width:1600px;height:70px;"></div></center>
+
+    <div class=" mt-4">
+        <div class="row">
+
+           
+            <div class="col-md-8">
+                <div class="box">
+                    
+                    
+                </div>
+            </div>
+
+         
+            <div class="col-md-4">
+                <div class="box mb-4">
+                    <h4 class="box-title">SẢN PHẨM NỔI BẬT</h4>
+                    <ul class="sidebar-list">
+                        <li><img src="~/Content/images/sp1.jpg" /><a href="#"></a></li>
+                        <li><img src="~/Content/images/sp2.jpg" /><a href="#"></a></li>
+                        <li><img src="~/Content/images/sp3.jpg" /><a href="#"></a></li>
+                    </ul>
+                </div>
+
+                <div class="box">
+                    <h4 class="box-title">TIN NỔI BẬT</h4>
+                    <ul class="news-list">
+                        <li><a href="#">Khi bị mỏi mắt cần làm gì?</a><span>23-02-2018</span></li>
+                        <li><a href="#">Cách chăm sóc sức khỏe</a><span>10-03-2018</span></li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
